# LiteGS

./: .gitignore  .gitmodules  3dgs_challenge_eval.py  LICENSE.md  README.MD  README.txt  aabb_raster_example.py  bvh_test.py  check_wrapper.py  example_BVH_visualization.py  example_metrics.py  example_train.py  frustumculling_aabb_example.py  full_eval.py  full_eval_3dgs_workshop.py  full_eval_log.txt  kernel_test.py  litegs_info.py  msight_compute.sh  output.txt  plot_gaussian.py  profiler.py  profiler_iter.py  profiler_raster.py  profiler_test.py  raster_perf.py  render_and_metrics.py  requirement.txt  results.csv  rotation.npy  scales.npy  setup.py  takes_time.txt  test.py  train.py  training.txt  visiual_init.py  visual_density_control.py
gaussian_splatting/: division.py  gaussian_util.py  model.py  scene.py  wrapper.py
gaussian_splatting/submodules/gaussian_raster/: CMakeLists.txt  README.md  binning.cu  binning.h  compact.cu  compact.h  ext_cuda.cpp  raster.cu  raster.h  raster_binning.cu  raster_binning.h  transform.cu  transform.h
litegs/: arguments.py  data.py
loader/: InfoLoader.py  PointCloudLoader.py  TrainingDataLoader.py
profiler_input_data/: color.npy  cov2d_inv.npy  mean2d.npy  opacities.npy  sorted_pointId.npy  sorted_tile_list.pt  tile_start_index.npy
scripts/: ablations_culling.py  ablations_densify.py  full_eval_aggressive.py  full_eval_fast.py  full_eval_resolution.py  print_conf_results.py  print_results.py  profiler_3dgs.py  scale_curve.py  scale_curve_single.py
temp/: render_test.py
training/: arguments.py  cache.py  training.py  (+2 more)
(+76 files in other folders)
